--- a/vai-studio-extention/package.json
+++ b/vai-studio-extention/package.json
@@ -33,6 +33,10 @@
             }
         }
     },
+    "categories": [
+        "Programming Languages",
+        "AI"
+    ],
     "scripts": {
         "vscode:prepublish": "npm run compile",   
         "compile": "tsc -p ./",
