--- a/vai-studio-extention/package.json
+++ b/vai-studio-extention/package.json
@@ -58,6 +58,7 @@
     "dependencies": {
         "@google/generative-ai": "^0.14.0"
     },
+    "icon": "images/icon.jpg",
     "repository": {
         "type": "git",
         "url": "https://github.com/vien105200318/extention-VAIcoding"
